// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen roles config import-export] should create the roles: the roles have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ role [cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen roles config import-export] should update the modified roles: the modified roles have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ role [cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen roles config import-export] should update the same roles: the roles have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ role [cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;
